# Chatbot-FURIA

./: .env  README.md  app.py  chatbot.py  data.py  furia_info.json  pyproject.toml  requirements.txt
static/css/: styles.css
static/js/: chat.js
static/script/: chat.js
templates/: index.html  styles.css
